# AI-uss

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml
.github/: copilot-instructions.md
benchmarks/: benchmark_a_star_20x20_2runs_20250812_105421.csv
unit1/1.pygame/: benchmark_seeds.json
unit1/2.minmax/: README.md  aiPlayer.js  game.js  gameUtils.js  index.html  minimax.js  minimaxAlphaBeta.js  style.css  treeVisualizer.js
unit1/2.minmax/chess/: index.html  package.json  styles.css
unit1/2.minmax/chess/.github/: copilot-instructions.md
unit1/2.minmax/chess/src/: ai.js  benchmarks.js  board.js  engine.js  heuristics.js  main.js  ui.js
unit1/2.minmax/tic_tac_toe/: aiPlayer.js  game_new.js  game_old.js  index.html  minimax.js  treeVisualizer.js
unit1/2.minmax/tic_tac_toe/.github/: copilot-instructions.md
unit1/3.inference/: main.py
unit1/3.inference/old_inference/: README.md  grid.py  player.py
unit1/4.pddl/: README.md
unit1/4.pddl/src/pddl_solver/: cli.py  solver.py
unit1/manito/manito_manito/: pyproject.toml
unit1/manito/manito_manito/examples/robot-gripper/: domain.pddl  problem.pddl
unit1/manito/manito_test/: main.py
unit1/manito/manito_test/examples/impossible-gripper/: domain.pddl  problem.pddl
unit1/manito/manito_test/examples/robot-gripper/: domain.pddl  problem.pddl
unit1/manito/manito_test/src/pddl_solver/: __init__.py
