[project]
name = "pddl-solver"
version = "0.1.0"
description = "PDDL planning problem solver using unified-planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.17.3",
    "unified-planning[pyperplan]>=1.2.0",
]

[project.scripts]
pddl-solver = "pddl_solver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
